# rope_abm_optimization

./: .gitignore  ABM_optimize.py  README.md  drac_requirements.txt  requirements.txt  rope_abm_optimization.csv
configFiles/: config_Scaffold_GH10.txt  config_Scaffold_GH2.txt  config_Scaffold_GH5.txt
inputs/: experimental_data.csv  sensitivity_analysis.csv
mock_testRun/: CMakeLists.txt  mock_testRun.cpp
scripts/: run_rope_test.sh
src/calibration/: preprocessing.py  run_rope.py  setup_abm_spotpy.py  simulation.py
